--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    background-color: #f5f5f7;
+    background-color: #fff8e2;
     color: #1d1d1f;
     line-height: 1.47059;
     font-weight: 400;
@@ -273,6 +273,10 @@ nav {
     grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
     gap: 30px;
     margin-bottom: 30px;
+}
+
+.piechart{
+    padding:20px;
 }
 
 /* Footer */
